# Robothon-starter

./: .gitignore  README.md  pyproject.toml  record_demo.py  registration.json  requirements.txt  run.py
assets/Aegis/urdf/: Aegis.csv  Aegis.urdf  Aegis_mujoco.urdf
assets/Futurist/: README.md  futurist.urdf  logo.stl
examples/: run_aegis_demo.py  run_ff_master_demo.py  run_futurist_demo.py
models/: prometheus.xml
prometheus/: __init__.py  config.py  controller.py  recorder.py  simulation.py  teleoperation.py  utils.py
submissions/prometheus/: README.md  pyproject.toml  record_demo.py  registration.json  requirements.txt  run.py
submissions/prometheus/models/: prometheus.xml
submissions/prometheus/prometheus/: __init__.py  config.py  controller.py  recorder.py  simulation.py  teleoperation.py  utils.py
