[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prometheus-surgical-robot"
version = "1.0.0"
description = "PROMETHEUS — Autonomous Dual-Arm Dexterous Surgical Suturing Robot (FFAI Robothon Summer 2026)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "mujoco>=3.1.0",
    "numpy>=1.24.0",
    "imageio[ffmpeg]>=2.31.0",
]

[project.scripts]
prometheus = "prometheus.simulation:main"

[tool.setuptools.packages.find]
include = ["prometheus*"]
